[package]
name = "gym-rs"
version = "0.0.0"
authors = ["Austin Chen <austin.yhc@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.7.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }

